fix modal bug on iOS

--- a/css/material.css
+++ b/css/material.css
@@ -27,6 +27,7 @@
     padding: 16px;
     padding-bottom: 4px;
     position: relative;
+    cursor: pointer;
 }
 .raw-wrapper {
     border: 8px solid white;
@@ -94,6 +95,7 @@
     font-size: 16px;
 }
 
+
 @media screen and (max-width: 499px){
 .nav-tabs > li > a {
     padding: 10px;
@@ -126,7 +128,7 @@
 }
 .transport-wrapper {
     border: 4px solid white;
-    padding-bottom: 8px;
+    padding-bottom: 6px;
 }
 
 /* Number Count */
@@ -207,4 +209,3 @@
     font-size: 14px;
 }
 }
-
